Reverted to JDK 1.8
Was having serious stability issues with OpenJDK 14 and Apache NetBeans 12.